# ScholarRank

./: .gitignore  .ignore  README.md  pyproject.toml
.sisyphus/plans/: scholarrank.md
docs/: PRD-scholarrank.md
scholarrank/: __init__.py  app.py
src/: app.py  config.py
src/matching/: __init__.py  matcher.py  scorer.py
src/output/: __init__.py  export.py
src/processing/: __init__.py  deduplicator.py  extractor.py  normalizer.py
src/profile/: __init__.py  interview.py  models.py
src/scrapers/: __init__.py  base.py  careeronestop.py  fastweb.py  iefa.py  intl_scholarships.py  scholars4dev.py  scholarships_com.py
src/storage/: __init__.py  database.py  models.py
src/tui/: __init__.py  app.tcss  commands.py  components.py  modals.py  screens.py  widgets.py
