[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholarrank"
version = "0.1.0"
description = "TUI tool for matching international scholarships."
requires-python = ">=3.10"
dependencies = [
    "textual",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "openai",
    "pyyaml",
    "crawlee",
    "playwright",
    "sqlalchemy>=2.0",
]

[project.scripts]
scholarrank = "scholarrank.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "scholarrank"]
